fix(datepicker): improving color contrast (#2616)

--- a/src/components/date-picker/DatePicker.scss
+++ b/src/components/date-picker/DatePicker.scss
@@ -68,7 +68,7 @@
     .date-picker-clear-btn {
         path {
             transition: fill linear .1s;
-            fill: $bdl-gray-40;
+            fill: $bdl-gray-50;
         }
     }
 
